--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:custom="http://schemas.android.com/apk/res/echo.rootstockapp"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="echo.rootstockapp.MainActivity"
@@ -17,7 +16,7 @@
         android:text="-1"/>
     <RelativeLayout
         android:id="@+id/row_barcode"
-        android:layout_width="match_parent"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:padding="10dp">
         <TextView
@@ -31,71 +30,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="70dp"/>
-    </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/row_type"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/row_barcode"
-        android:padding="10dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Type"
-            android:id="@+id/type_label"/>
-
-        <TextView
-            android:id="@+id/type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="70dp"/>
-    </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/row_site"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/row_type"
-        android:padding="10dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Site"
-            android:id="@+id/site_label"/>
-
-        <TextView
-            android:id="@+id/site"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="70dp"/>
-    </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/row_block"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/row_site"
-        android:padding="10dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Block"
-            android:id="@+id/block_label"/>
-
-        <TextView
-            android:id="@+id/block"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="70dp"/>
+            android:layout_below="@+id/barcode_label"
+            android:textSize="8pt"
+            />
     </RelativeLayout>
     <RelativeLayout
         android:id="@+id/row_FPI"
-        android:layout_width="match_parent"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/row_block"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/row_barcode">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -106,14 +51,16 @@
             android:id="@+id/FPI"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/FPI_label"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="70dp"/>
+            android:textSize="8pt"
+            />
     </RelativeLayout>
     <RelativeLayout
         android:id="@+id/row_cultivar"
-        android:layout_width="match_parent"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/row_FPI"
+        android:layout_toEndOf="@id/row_FPI"
         android:padding="10dp">
         <TextView
             android:layout_width="wrap_content"
@@ -126,32 +73,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="70dp"/>
+            android:layout_below="@+id/clutivar_label"
+            android:textSize="8pt"
+        />
     </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/row_graftyear"
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/row_cultivar"
-        android:padding="10dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Graft Year"
-            android:id="@+id/graftyear_label"/>
-
-        <TextView
-            android:id="@+id/graftyear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="70dp"/>
-    </RelativeLayout>
+        android:layout_height="2dp"
+        android:id="@+id/detailsDivider"
+        android:background="@color/colorPrimary"
+        android:layout_below="@+id/row_barcode"/>
     <RelativeLayout
         android:id="@+id/row_cane_measurements"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/row_graftyear"
+        android:layout_below="@+id/row_barcode"
         android:padding="10dp">
 
         <TextView
@@ -213,4 +149,82 @@
         android:layout_alignParentStart="true"
         android:onClick="copyDatabase"
         android:text="Copy DB"/>
+    <!-- <RelativeLayout
+        android:id="@+id/row_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/row_barcode"
+        android:padding="10dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Type"
+            android:id="@+id/type_label"/>
+
+        <TextView
+            android:id="@+id/type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="70dp"/>
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/row_site"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/row_type"
+        android:padding="10dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Site"
+            android:id="@+id/site_label"/>
+
+        <TextView
+            android:id="@+id/site"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="70dp"/>
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/row_block"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/row_site"
+        android:padding="10dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Block"
+            android:id="@+id/block_label"/>
+
+        <TextView
+            android:id="@+id/block"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="70dp"/>
+    </RelativeLayout> -->
+
+
+    <!-- <RelativeLayout
+        android:id="@+id/row_graftyear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/row_cultivar"
+        android:padding="10dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Graft Year"
+            android:id="@+id/graftyear_label"/>
+
+        <TextView
+            android:id="@+id/graftyear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="70dp"/>
+    </RelativeLayout> -->
 </RelativeLayout>
