Working pin lock, Change form dialog, Network login dialog, WIP Load data dialog

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,4 +2,7 @@
     <declare-styleable name="MeasurementText">
         <attr name="measurement_id" format="integer"/>
     </declare-styleable>
-</resources>
+    <declare-styleable name="PinInput">
+
+    </declare-styleable>
+ </resources>
