--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#00af79</color>
+    <color name="colorPrimaryDark">#008B55</color>
+    <color name="colorPrimaryLight">#5AEFB2</color>
+    <color name="colorSecondary">#00afd6</color>
+    <color name="colorSecondaryDark">#007fa4</color>
+    <color name="colorTextError">#F44336</color>
+    <color name="colorTextSuccess">#4CAF50</color>
+    <color name="colorFieldLockedBackground">#FFDA60</color>
 </resources>
