--- a/app/src/main/res/layout/load_data_layout.xml
+++ b/app/src/main/res/layout/load_data_layout.xml
@@ -92,13 +92,30 @@
             android:textColor="@color/colorTextError"
             android:visibility="invisible"/>
 
-        <ProgressBar
-            android:id="@+id/progress_bar_query"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/progress_holder"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:indeterminate="true"
-            android:visibility="gone"
-            android:layout_centerInParent="true" />
+            android:visibility="invisible">
+            
+            <TextView
+                android:id="@+id/text_progress_bar_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="D"
+                android:layout_centerVertical="true"
+                android:paddingRight="8dp"/>
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/text_progress_bar_label"/>
+
+        </RelativeLayout>
+
 
     </RelativeLayout>
     
@@ -106,7 +123,7 @@
         android:id="@+id/button_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cancel"
+        android:text="Close"
         android:layout_toStartOf="@+id/button_load"
         android:layout_below="@+id/text_response_message_holder"/>
 
