Site and blocks are now dynamically loaded from the API. Cane info form fields are disbaled by default and enabled upon a successful barcode scan. Username and env values are stored in the preferences.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorTextError">#F44336</color>
     <color name="colorTextSuccess">#4CAF50</color>
     <color name="colorFieldLockedBackground">#FFDA60</color>
+    <color name="colorFormDisabledBackground">#1e000000</color>
 </resources>
