--- a/app/src/main/res/layout/cane_info_fragment_layout.xml
+++ b/app/src/main/res/layout/cane_info_fragment_layout.xml
@@ -3,32 +3,34 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    
-    <include layout="@layout/form_header_layout"
-        android:id="@+id/include" />
+    android:layout_height="match_parent">
+
+    <include
+        android:id="@+id/include_header"
+        layout="@layout/form_header_layout" />
 
     <RelativeLayout
-        android:visibility="gone"
         android:id="@+id/row_cane_measurements"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_below="@+id/include"
-        android:layout_alignParentStart="true">
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/include_header"
+        android:background="@color/colorFormDisabledBackground"
+        android:padding="8dp">
 
         <RelativeLayout
             android:id="@+id/cane_length_holder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:paddingTop="12dp"
                 android:paddingRight="8dp"
+                android:paddingTop="12dp"
                 android:text="cm" />
 
             <android.support.design.widget.TextInputLayout
@@ -39,13 +41,13 @@
                     android:id="@+id/cane_length"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:enabled="true"
-                    android:inputType="number|numberDecimal"
-                    android:maxLines="1"
-                    android:maxLength="20"
+                    android:enabled="false"
                     android:hint="Cane length"
+                    android:inputType="number|numberDecimal"
+                    android:maxLength="20"
+                    android:maxLines="1"
                     android:nextFocusDown="@+id/cane_diameter"
-                    custom:measurement_id="1"/>
+                    custom:measurement_id="1" />
 
             </android.support.design.widget.TextInputLayout>
         </RelativeLayout>
@@ -63,7 +65,7 @@
                 android:layout_centerVertical="true"
                 android:paddingRight="8dp"
                 android:paddingTop="12dp"
-                android:text="mm"/>
+                android:text="mm" />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -73,63 +75,70 @@
                     android:id="@+id/cane_diameter"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:enabled="true"
+                    android:enabled="false"
                     android:hint="Cane diameter"
                     android:inputType="number|numberDecimal"
-                    android:maxLines="1"
                     android:maxLength="20"
+                    android:maxLines="1"
                     android:nextFocusUp="@+id/cane_length"
                     custom:measurement_id="2" />
             </android.support.design.widget.TextInputLayout>
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/cane_exists_holder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/cane_exists_holder"
             android:layout_below="@+id/cane_diameter_holder"
             android:paddingBottom="8dp"
-            android:paddingTop="16dp"
-            android:paddingStart="5dp">
+            android:paddingStart="5dp"
+            android:paddingTop="16dp">
 
             <android.support.v7.widget.AppCompatCheckBox
                 android:id="@+id/cane_exists"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"/>
+                android:layout_centerVertical="true"
+                android:enabled="false" />
 
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/cane_exists_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:layout_centerVertical="true"
                 android:layout_weight="1"
                 android:text="Cane exists in field?"
-                android:layout_centerVertical="true"/>
+                android:textSize="18sp" />
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/cane_development_holder"
-            android:layout_below="@+id/cane_exists_holder"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/cane_exists_holder">
 
             <RadioGroup
+                android:id="@+id/radio_group_early_or_late"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:id="@+id/radioGroup">
+
+                android:layout_alignParentEnd="true">
+
                 <RadioButton
-                        android:id="@+id/radio_early"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true" />
+                    android:id="@+id/radio_late"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:enabled="false" />
+
                 <RadioButton
-                        android:id="@+id/radio_late"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true" />
+
+                    android:id="@+id/radio_early"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:enabled="false" />
 
             </RadioGroup>
 
@@ -137,37 +146,33 @@
                 android:id="@+id/radio_early_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Fruit stalk / Early"
-                android:textSize="18sp"
-                android:paddingTop="6dp"
-                android:paddingLeft="5dp"
+                android:layout_alignParentTop="true"
                 android:paddingBottom="4dp"
-                android:layout_alignParentTop="true" />
+                android:paddingLeft="5dp"
+                android:paddingTop="6dp"
+                android:text="Fruit stalk / Early"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/radio_late_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Late developed"
-                android:textSize="18sp"
-                android:paddingTop="6dp"
-                android:paddingLeft="5dp"
+                android:layout_below="@+id/radio_early_label"
                 android:paddingBottom="4dp"
-                android:layout_below="@+id/radio_early_label" />
+                android:paddingLeft="5dp"
+                android:paddingTop="6dp"
+                android:text="Late developed"
+                android:textSize="18sp" />
 
         </RelativeLayout>
 
     </RelativeLayout>
 
+    <include
+        android:id="@+id/include_footer"
+        layout="@layout/form_footer_layout" />
+
     <!-- <Button
-        android:id="@+id/buttonSave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="saveData"
-        android:text="Save"/>
-    <Button
         android:id="@+id/buttonCopyDb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
