--- a/app/src/main/res/layout/form_header_layout.xml
+++ b/app/src/main/res/layout/form_header_layout.xml
@@ -1,27 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/form_header"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/form_header">
+    android:layout_height="wrap_content">
+
     <TextView
-            android:id="@+id/id"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:visibility="gone"
-            android:text="-1"/>
-    <RelativeLayout    
+        android:id="@+id/id"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="-1"
+        android:visibility="gone" />
+
+    <RelativeLayout
         android:id="@+id/row_barcode"
-        android:layout_width="100dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:paddingBottom="8dp"
+        android:paddingEnd="4dp"
+        android:paddingStart="4dp"
+        android:paddingTop="8dp">
+
         <TextView
             android:id="@+id/barcode_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Barcode"/>
+            android:text="Barcode" />
 
         <TextView
             android:id="@+id/barcode"
@@ -39,7 +44,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/row_barcode"
-        android:padding="10dp">
+        android:paddingBottom="8dp"
+        android:paddingEnd="4dp"
+        android:paddingStart="4dp"
+        android:paddingTop="8dp">
 
         <TextView
             android:id="@+id/FPI_label"
@@ -62,7 +70,10 @@
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/row_FPI"
-        android:padding="10dp">
+        android:paddingBottom="8dp"
+        android:paddingEnd="4dp"
+        android:paddingStart="4dp"
+        android:paddingTop="8dp">
 
         <TextView
             android:id="@+id/clutivar_label"
@@ -79,10 +90,12 @@
             android:background="@color/colorFieldLockedBackground"
             android:textSize="8pt" />
     </RelativeLayout>
+
     <ImageView
+        android:id="@+id/detailsDivider"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:id="@+id/detailsDivider"
-        android:background="@color/colorPrimary"
-        android:layout_below="@+id/row_barcode"/>
+        android:layout_below="@+id/row_barcode"
+        android:background="@color/colorPrimary" />
+        
 </RelativeLayout>
