--- a/app/src/main/res/layout/cane_details_layout.xml
+++ b/app/src/main/res/layout/cane_details_layout.xml
@@ -92,7 +92,7 @@
             android:layout_below="@+id/cane_diameter_holder"
             android:paddingBottom="8dp"
             android:paddingStart="5dp"
-            android:paddingTop="16dp">
+            android:paddingTop="8dp">
 
             <android.support.v7.widget.AppCompatCheckBox
                 android:id="@+id/cane_exists"
@@ -100,14 +100,14 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:enabled="false" />
+                android:enabled="false"
+                android:checked="true" />
 
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/cane_exists_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_weight="1"
                 android:text="Cane exists in field?"
                 android:textSize="18sp" />
         </RelativeLayout>
@@ -116,8 +116,12 @@
             android:id="@+id/cane_development_holder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/cane_exists_holder">
+            android:layout_below="@+id/cane_exists_holder"
+            android:paddingBottom="8dp"
+            android:paddingStart="5dp"
+            android:paddingTop="8dp">
 
+            <!--
             <RadioGroup
                 android:id="@+id/radio_group_early_or_late"
                 android:layout_width="wrap_content"
@@ -163,6 +167,22 @@
                 android:paddingTop="6dp"
                 android:text="Late developed"
                 android:textSize="18sp" />
+            -->
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/text_cane_type_label"
+                android:text="Cane type"
+                android:textSize="18sp" />
+
+            <Spinner
+                android:id="@+id/spinner_cane_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:entries="@array/cane_type" />
 
         </RelativeLayout>
 
