--- a/app/src/main/res/layout/form_footer_layout.xml
+++ b/app/src/main/res/layout/form_footer_layout.xml
@@ -1,8 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/form_footer"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
+    
+    <!--
+    <Button
+        android:id="@+id/button_enable"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toStartOf="@+id/button_add_comment"
+        android:text="Enable" />
+    -->
+
+    <Button
+        android:id="@+id/button_add_comment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:enabled="false"
+        android:layout_toStartOf="@+id/button_save"
+        android:text="Add comment" />
 
     <Button
         android:id="@+id/button_save"
@@ -11,5 +31,5 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:enabled="false"
-        android:text="Save" />
+        android:text="Save data" />
 </RelativeLayout>
