--- a/app/src/main/res/layout/form_header_layout.xml
+++ b/app/src/main/res/layout/form_header_layout.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/form_header"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:theme="@style/Header">
 
     <TextView
         android:id="@+id/id"
@@ -34,8 +36,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/barcode_label"
-            android:background="@color/colorFieldLockedBackground"
-            android:textSize="8pt" />
+            android:background="#000000"
+            android:textSize="8pt"
+            android:paddingLeft="4dp"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -61,8 +64,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/FPI_label"
-            android:background="@color/colorFieldLockedBackground"
-            android:textSize="8pt" />
+            android:background="#000000"
+            android:textSize="8pt"
+            android:paddingLeft="4dp" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -87,15 +91,17 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/clutivar_label"
-            android:background="@color/colorFieldLockedBackground"
-            android:textSize="8pt" />
+            android:background="#000000"
+            android:textSize="8pt"
+            android:paddingLeft="4dp"/>
     </RelativeLayout>
 
+    <!--
     <ImageView
         android:id="@+id/detailsDivider"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_below="@+id/row_barcode"
         android:background="@color/colorPrimary" />
-        
+    -->
 </RelativeLayout>
