--- a/app/src/main/res/layout/form_header_layout.xml
+++ b/app/src/main/res/layout/form_header_layout.xml
@@ -13,12 +13,24 @@
         android:text="-1"
         android:visibility="gone" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_alignParentEnd="false"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentTop="false"
+        android:background="@color/colorSecondary"
+        android:visibility="gone"
+        app:srcCompat="@color/colorSecondary" />
+
     <RelativeLayout
         android:id="@+id/row_barcode"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentTop="false"
+        android:layout_below="@+id/imageView"
         android:paddingBottom="8dp"
         android:paddingEnd="4dp"
         android:paddingStart="4dp"
@@ -37,15 +49,16 @@
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/barcode_label"
             android:background="#000000"
-            android:textSize="8pt"
-            android:paddingLeft="4dp"/>
+            android:paddingLeft="4dp"
+            android:textSize="8pt" />
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/row_FPI"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentTop="false"
+        android:layout_below="@+id/imageView"
         android:layout_toEndOf="@+id/row_barcode"
         android:paddingBottom="8dp"
         android:paddingEnd="4dp"
@@ -65,14 +78,15 @@
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/FPI_label"
             android:background="#000000"
-            android:textSize="8pt"
-            android:paddingLeft="4dp" />
+            android:paddingLeft="4dp"
+            android:textSize="8pt" />
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/row_cultivar"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView"
         android:layout_toEndOf="@id/row_FPI"
         android:paddingBottom="8dp"
         android:paddingEnd="4dp"
@@ -92,8 +106,8 @@
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/clutivar_label"
             android:background="#000000"
-            android:textSize="8pt"
-            android:paddingLeft="4dp"/>
+            android:paddingLeft="4dp"
+            android:textSize="8pt" />
     </RelativeLayout>
 
     <!--
