--- a/app/src/main/res/layout/load_data_layout.xml
+++ b/app/src/main/res/layout/load_data_layout.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/Base.TextAppearance.AppCompat.Headline"
-            android:text="Load data"
+            android:text=""
             android:layout_margin="10dp"/>
         <ImageView
             android:layout_width="match_parent"
