--- a/app/src/main/res/layout/cane_details_layout.xml
+++ b/app/src/main/res/layout/cane_details_layout.xml
@@ -35,7 +35,8 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                custom:hintTextAppearance="@android:style/TextAppearance.Medium">
 
                 <echo.rootstockapp.MeasurementText
                     android:id="@+id/cane_length"
@@ -71,7 +72,8 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                custom:hintTextAppearance="@android:style/TextAppearance.Medium">
 
                 <echo.rootstockapp.MeasurementText
                     android:id="@+id/cane_diameter"
@@ -106,7 +108,7 @@
                 android:checked="true"
                 android:enabled="false" />
 
-            <android.support.v7.widget.AppCompatTextView
+            <TextView
                 android:id="@+id/cane_exists_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
