--- a/app/src/main/res/layout/app_login_layout.xml
+++ b/app/src/main/res/layout/app_login_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/AppTheme.NoActionBar">
+    android:theme="@style/RootstockTheme.NoActionBar">
 
     <RelativeLayout
         android:layout_width="wrap_content"
