--- a/app/src/main/res/layout/load_data_layout.xml
+++ b/app/src/main/res/layout/load_data_layout.xml
@@ -1,31 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="10dp">
+
     <RelativeLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="8dp">
+
         <TextView
             android:id="@+id/headerTitle"
+            style="@style/Base.TextAppearance.AppCompat.Headline"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/Base.TextAppearance.AppCompat.Headline"
-            android:text=""
-            android:layout_margin="10dp"/>
+            android:ems="18"
+            android:text="Load Data" />
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_below="@+id/headerTitle"
-            android:background="@color/colorPrimary"/>
+            android:background="@color/colorPrimary" />
     </RelativeLayout>
+
     <RelativeLayout
         android:id="@+id/selection_holder"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@id/header"
         android:paddingLeft="16dp"
         android:paddingRight="16dp">
@@ -40,15 +43,15 @@
                 android:id="@+id/text_site_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Site: "
                 android:layout_centerVertical="true"
-                android:paddingRight="5dp"/>
+                android:paddingRight="5dp"
+                android:text="Site: " />
 
             <Spinner
                 android:id="@+id/spinner_site_picker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"/>
+                android:layout_marginLeft="50dp" />
 
         </RelativeLayout>
 
@@ -60,51 +63,52 @@
             android:paddingBottom="8dp">
 
             <TextView
+                android:id="@+id/text_block_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/text_block_label"
-                android:text="Block:"
-                android:paddingRight="5dp" />
+                android:paddingRight="5dp"
+                android:text="Block:" />
 
             <Spinner
+                android:id="@+id/spinner_block_picker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/spinner_block_picker"
-                android:layout_marginLeft="50dp"/>
+                android:layout_marginLeft="50dp" />
 
         </RelativeLayout>
 
     </RelativeLayout>
+
     <RelativeLayout
         android:id="@+id/text_response_message_holder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/selection_holder"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="16dp"
+        android:layout_below="@+id/selection_holder"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp">
+        android:layout_marginStart="16dp">
 
         <TextView
+            android:id="@+id/text_response_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/text_response_message"
             android:textColor="@color/colorTextError"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
 
         <RelativeLayout
             android:id="@+id/progress_holder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="invisible">
-            
+
             <TextView
                 android:id="@+id/text_progress_bar_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="D"
                 android:layout_centerVertical="true"
-                android:paddingRight="8dp"/>
+                android:paddingRight="8dp"
+                android:text="D" />
 
             <ProgressBar
                 android:id="@+id/progress_bar"
@@ -112,27 +116,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/text_progress_bar_label"/>
+                android:layout_toEndOf="@+id/text_progress_bar_label" />
 
         </RelativeLayout>
 
 
     </RelativeLayout>
-    
+
     <Button
         android:id="@+id/button_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Close"
+        android:layout_below="@+id/text_response_message_holder"
         android:layout_toStartOf="@+id/button_load"
-        android:layout_below="@+id/text_response_message_holder"/>
+        android:text="Close" />
 
     <Button
         android:id="@+id/button_load"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Load data"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/text_response_message_holder"/>
+        android:layout_below="@+id/text_response_message_holder"
+        android:text="Load data" />
 
 </RelativeLayout>
